--- a/index.html
+++ b/index.html
@@ -1,36 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
+  <!-- External Stylesheet -->
+  <link rel="stylesheet" href="css/main.css">
+
   <title>Frontend Mentor | 3-column preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <!-- Internal Stylsheet -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
+
 </head>
+
 <body>
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
+  <section role="main" class="container">
+    <div class="sedan" role="region">
+      <img src="images/icon-sedans.svg" alt="Sedan Icon">
+      <h2>Sedans</h2>
+      <p>a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road
+        trip.</p>
+    </div>
+    <div class="suv" role="region">
+      <img src="images/icon-suvs.svg" alt="SUV Icon">
+      <h2>SUVs</h2>
+      <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and
+        off-road adventures.</p>
+    </div>
 
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
+    <div class="luxury" role="region">
+      <img src="images/icon-luxury.svg" alt="Luxury Icon">
+      <h2>Luxury</h2>
+      <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and
+        arrive in style.</p>
+    </div>
+  </section>
 
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
-  
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://twitter.com/iharpreetbhatti">Harpreet Singh</a>.</p>
   </div>
 </body>
+
 </html>
