--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
+  <!-- Font Families -->
+  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap"
+    rel="stylesheet">
+
   <!-- External Stylesheet -->
   <link rel="stylesheet" href="css/main.css">
 
@@ -29,28 +33,32 @@
 
 <body>
   <section role="main" class="container">
-    <div class="sedan" role="region">
+    <div class="box" role="region">
       <img src="images/icon-sedans.svg" alt="Sedan Icon">
       <h2>Sedans</h2>
-      <p>a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road
+      <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next
+        road
         trip.</p>
+      <a href="#" class="btn btn-sedan" role="button">Learn More</a>
     </div>
-    <div class="suv" role="region">
+    <div class="box" role="region">
       <img src="images/icon-suvs.svg" alt="SUV Icon">
       <h2>SUVs</h2>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and
         off-road adventures.</p>
+      <a href="#" class="btn btn-suv" role="button">Learn More</a>
     </div>
 
-    <div class="luxury" role="region">
+    <div class="box" role="region">
       <img src="images/icon-luxury.svg" alt="Luxury Icon">
       <h2>Luxury</h2>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and
         arrive in style.</p>
+      <a href="#" class="btn btn-luxury" role="button">Learn More</a>
     </div>
   </section>
 
-  <div class="attribution">
+  <div class="attribution" role="doc-credits">
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://twitter.com/iharpreetbhatti">Harpreet Singh</a>.</p>
   </div>
